# StreamSimulator

./: .gitignore  CMakeLists.txt
LBM/: main.cpp
LBM/Additionaly/: 2DFormel.txt  3DFormel.txt  codeGen2D.m  codeGen3D.m
LBM/src/: CustomCudaExtensions.h  ImmersedBody.cpp  ImmersedBody.h  ImmersedBoundaryMethod.cpp  ImmersedBoundaryMethod.h  ImmersedBoundaryMethod_Kernels.h  ImmersedBoundaryMethod_P.cu  ImmersedBoundaryMethod_P.h  LBM_DomainBoundary.h  LBM_Math.h  LBM_Solver.cpp  LBM_Solver.h  LBM_Solver_Kernels.h  LBM_Solver_P.cu  LBM_Solver_P.h  LBM_Types.h  LBM_Writer.cpp  LBM_Writer.h  ParticleGenerator.cpp  ParticleGenerator.h  ParticleGenerator_Kernels.h  ParticleGenerator_P.cu  ParticleGenerator_P.h  ParticleSource.cpp  ParticleSource.h  SimDomain.cpp  SimDomain.h  SimState.cpp  SimState.h  SimState_P.cu  SimState_P.h  Trajectory.cpp  Trajectory.h  cudaErrorHandle.h
LBM/src/cyCodeBase/: cySampleElim.h
LBM/src/location_ptr/: CudaMemoryInfo.cpp  CudaMemoryInfo.h  DatatypesTraits.cpp  DatatypesTraits.h  Matrix3.cpp  Matrix3.h  Matrix3.inl  Real.cpp  Real.h  Vector3.cpp  Vector3.h  Vector3.inl  array.h  arrayFwd.h  arrayMath.h  binom.h  cpugpu_macros_pop.inl  cpugpu_macros_push.inl  cuda_ptr.h  location.h  locationArrayHelper.cpp  locationArrayHelper.h  locationArrayMath.cpp  locationArrayMath.cu  locationArrayMath.h  locationPtr.h  meta.h
include/: DataStructureAlg.h
include/lbm_module/: LBMKernels.h  LBMSolver.h  SimDomain.h  SimState.h  cudaErrorHandle.h  lbm_kernels.cu
include/ui_module/: SimRenderer.h  mainwindow.h
src/: DataStructureAlg.cpp  main.cpp
src/lbm_module/: LBMKernels.cu  LBMSolver.cpp  SimDomain.cpp  SimState.cpp
src/ui_module/: SimRenderer.cpp  mainwindow.cpp  mainwindow.ui
